@@ -1,24 +1,29 @@
 package eu.goodyfx.mcraspisystem.utils;
 
-import org.bukkit.Bukkit;
+import eu.goodyfx.mcraspisystem.McRaspiSystem;
+import org.bukkit.plugin.java.JavaPlugin;
 
 import javax.net.ssl.HttpsURLConnection;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.logging.Level;
 
 public class DiscordHandler {
 
+    private final McRaspiSystem plugin = JavaPlugin.getPlugin(McRaspiSystem.class);
     private URL webHookURL = null;
 
     public DiscordHandler(String webHookURL) {
         try {
-            this.webHookURL = new URL(webHookURL);
-        } catch (MalformedURLException e) {
-            Bukkit.getLogger().log(Level.SEVERE, "URL cannot be converted! :: " + webHookURL, e);
+            this.webHookURL = new URI(webHookURL).toURL();
+        } catch (URISyntaxException | MalformedURLException e) {
+            String message = String.format("URL cannot be converted! :: %s", webHookURL);
+            plugin.getLogger().log(Level.SEVERE, message, e);
         }
     }
 
@@ -32,15 +37,16 @@ public class DiscordHandler {
                 connection.setDoOutput(true);
                 try (final OutputStream outputStream = connection.getOutputStream()) {
                     // Handle backslashes.
-                    String preparedMessage = message.replaceAll("\\\\", "");
+                    String preparedMessage = message.replace("\\\\", "");
                     if (preparedMessage.endsWith(" *"))
                         preparedMessage = preparedMessage.substring(0, preparedMessage.length() - 2) + "*";
 
                     outputStream.write(("{\"content\":\"" + preparedMessage + "\"}").getBytes(StandardCharsets.UTF_8));
                 }
                 connection.getInputStream();
+
             } catch (final IOException e) {
-                Bukkit.getLogger().log(Level.SEVERE, "Error while Handle Discord WebHook", e);
+                plugin.getLogger().log(Level.SEVERE, "Error while Handle Discord WebHook", e);
             }
         }
     }
